Fixed redundant scrollbar

--- a/main.css
+++ b/main.css
@@ -48,6 +48,7 @@ body {
 
 .todo__input-container {
 	flex: 1 1;
+	padding: 0;
 }
 
 .todo__input-value {
